bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:6: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (weekday==true && vacation==false){
       ^